@@ -1,3 +1,6 @@
+2016-03-22   Mark Hatle <mark.hatle@windriver.com>
+	* src/gather.c, src/get.c: Fix LD_PRELOAD
+
 2016-03-18   Donn Seeley <donn.seeley@windriver.com>
         * src/rtld/rtld.c: rewrite build_local_scope to ensure breadth-first
                 processing
